Committing local changes

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exam Marks Calculator</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Exam Marks Calculator</h1>
-  <p>Enter your answers for each question below.</p>
-  <div id="questions"></div>
-  <br>
-  <button onclick="calculateMarks()">Calculate Marks</button>
-  <p id="result"></p>
+  <div class="container">
+    <h1>Exam Marks Calculator</h1>
+    <p>Enter your answers for each question below.</p>
+    <div id="questions"></div>
+    <br>
+    <button onclick="calculateMarks()">Calculate Marks</button>
+    <p id="result"></p>
+  </div>
   <script src="index.js"></script>
 </body>
 </html>
