--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Exam Marks Calculator</h1>
+    <h1>Exam Marks Calculator by ashhar</h1>
     <p>Enter your answers for each question below.</p>
     <div id="questions"></div>
     <br>
