--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
     .question input[type="radio"] {
       margin-right: 5px;
     }
+    .question.correct {
+      background-color: #c8e6c9;
+    }
+    .question.wrong {
+      background-color: #ffcdd2;
+    }
+    .question.unanswered {
+      background-color: #ffecb3;
+    }
     button {
       background-color: #4CAF50;
       color: white;
