--- a/index.html
+++ b/index.html
@@ -123,11 +123,16 @@ button:hover {
   </style>
 </head>
 <body>
+    
+  <div class="container">
     <div class="container1">
         <h5></h5>
         <a href="pdf.html" class="link-button1">click here to View question paper</a>
     </div>
-  <div class="container">
+    <div class="container1">
+        <h5></h5>
+        <a href="answers.html" class="link-button1">click here to View solutions</a>
+    </div>
     <h1>Exam Marks Calculator by ashhar jamal</h1>
     <p>Select the answer key set and enter your answers for each question below.</p>
     <label for="answerKeySet">Select Answer Key Set:</label>
