--- a/answers.html
+++ b/answers.html
@@ -79,7 +79,7 @@
     <h1 class="header101">Solution Library</h1>
     <div class="photo-library">
         <div class="photo-item">
-            <a href="/solutions.html/sol1.html"><img src="/amu sol images/sol1.png" alt="solution 1"></a>
+            <a href="/solutions.html/sol.html"><img src="/amu sol images/sol.png" alt="solution 1"></a>
             solution to question 1
         </div>
         <div class="photo-item">
