--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Exam Marks Calculator by ashhar jamal</title>
   <style>
+    
      body1 {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -12,28 +13,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 1000vh;
             background: #f0f0f0;
             color: #333;
         }
         .container1 {
             text-align: center;
-        }
-        .link-button1 {
-            display: inline-block;
-            padding: 10px 20px;
-            margin-top: 20px;
-            background: #6a11cb;
-            background: -webkit-linear-gradient(to right, #2575fc, #6a11cb);
-            background: linear-gradient(to right, #2575fc, #6a11cb);
-            color: white;
-            text-decoration: none;
-            font-size: 1.2em;
-            border-radius: 5px;
-            transition: background 0.3s;
-        }
-        .link-button1:hover {
-            background: #2575fc;
         }
 
     body {
@@ -52,7 +37,7 @@
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 80%;
+    width: 1000%;
     max-width: 600px;
     margin-top: 20px;
 }
@@ -99,6 +84,40 @@ select {
 .question.unanswered {
     background-color: #ffecb3;
 }
+.button-54 {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #000;
+  cursor: pointer;
+  border: 4px solid;
+  padding: 0.25em 0.5em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+  position: relative;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  
+}
+
+.button-54:active {
+  box-shadow: 0px 0px 0px 0px;
+  top: 5px;
+  left: 5px;
+}
+.button-54:hover {
+    background: -webkit-linear-gradient(to right, #2575fc, #6a11cb);
+    background: linear-gradient(to right, #2575fc, #6a11cb);
+    transition: 0.3s;
+        }
+
+@media (min-width: 768px) {
+  .button-54 {
+    padding: 0.25em 0.75em;
+  }
+}
 
 button {
     background-color: #4CAF50;
@@ -127,11 +146,11 @@ button:hover {
   <div class="container">
     <div class="container1">
         <h5></h5>
-        <a href="pdf.html" class="link-button1">click here to View question paper</a>
+        <a href="pdf.html" class="button-54">click here to View question paper</a>
     </div>
     <div class="container1">
         <h5></h5>
-        <a href="answers.html" class="link-button1">click here to View solutions</a>
+        <a href="answers.html" class="button-54">click here to View solutions</a>
     </div>
     <h1>Exam Marks Calculator by ashhar jamal</h1>
     <p>Select the answer key set and enter your answers for each question below.</p>
