--- a/answers.html
+++ b/answers.html
@@ -53,29 +53,47 @@
             object-fit: cover;
             display: block;
         }
-        .link-button {
-            display: inline-block;
-            padding: 10px 20px;
-            margin-top: 20px;
-            background: #6a11cb;
-            background: -webkit-linear-gradient(to right, #2575fc, #6a11cb);
-            background: linear-gradient(to right, #2575fc, #6a11cb);
-            color: white;
-            text-decoration: none;
-            font-size: 1.2em;
-            border-radius: 5px;
-            transition: background 0.3s;
+        .button-54 {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #000;
+  cursor: pointer;
+  border: 4px solid;
+  padding: 0.25em 0.5em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+  position: relative;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  
+}
+
+.button-54:active {
+  box-shadow: 0px 0px 0px 0px;
+  top: 5px;
+  left: 5px;
+}
+.button-54:hover {
+    background: -webkit-linear-gradient(to right, #2575fc, #6a11cb);
+    background: linear-gradient(to right, #2575fc, #6a11cb);
+    transition: 0.3s;
         }
-        .link-button:hover {
-            background: #2575fc;
-        }
+
+@media (min-width: 768px) {
+  .button-54 {
+    padding: 0.25em 0.75em;
+  }
+}
     </style>
 </head>
 <body>
     <h1>more solutions sooon
     </h1>
     <br>
-    <a href="/index.html" class="link-button">Return to Website</a>
+    <a href="/index.html" class="button-54">Return to Website</a>
     <h1 class="header101">Solution Library</h1>
     <div class="photo-library">
         <div class="photo-item">
