--- a/pdf.html
+++ b/pdf.html
@@ -7,12 +7,12 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
+            margin: 1000;
+            padding: 1000;
             display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            justify-content:  center;
+            align-items:  center ;
+            height: 160vh;
             background: linear-gradient(135deg, #74ebd5, #ACB6E5);
             color: #333;
         }
@@ -30,18 +30,29 @@
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
         }
         .header {
-            padding: 20px;
-            background: #6a11cb;
-            background: -webkit-linear-gradient(to right, #2575fc, #6a11cb);
-            background: linear-gradient(to right, #2575fc, #6a11cb);
-            color: #fff;
+            font-family: "Open Sans", sans-serif;
+            font-size: 16px;
             text-align: center;
-            font-size: 1.5em;
-            font-weight: bold;
+            letter-spacing: 2px;
+            text-decoration: none;
+            text-transform: uppercase;
+            color: #000;
+            cursor: pointer;
+            border: 4px solid;
+            padding: 0.25em 0.5em;
+            box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+            position: relative;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+            box-shadow: 0px 0px 0px 0px;
+            top: 5px;
+            left: 5px;
+  
         }
         .pdf-viewer {
             width: 100%;
-            height: 600px;
+            height: 1000px;
             border: none;
         }
     </style>
