--- a/pdf.html
+++ b/pdf.html
@@ -3,27 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AMU XI entrance question paper set-B</title>
+    <title>AMU XI Entrance Question Paper Set-B</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 1000;
-            padding: 1000;
+            margin: 0;
+            padding: 0;
             display: flex;
-            justify-content:  center;
-            align-items:  center ;
-            height: 160vh;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
             background: linear-gradient(135deg, #74ebd5, #ACB6E5);
             color: #333;
         }
         .container {
-            width: 80%;
-            max-width: 900px;
+            width: 100%;
+            max-width: 600px;
             background: #fff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             border-radius: 10px;
             overflow: hidden;
             transition: transform 0.3s, box-shadow 0.3s;
+            margin: 20px;
         }
         .container:hover {
             transform: translateY(-10px);
@@ -34,32 +35,21 @@
             font-size: 16px;
             text-align: center;
             letter-spacing: 2px;
-            text-decoration: none;
             text-transform: uppercase;
             color: #000;
-            cursor: pointer;
-            border: 4px solid;
-            padding: 0.25em 0.5em;
-            box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
-            position: relative;
-            user-select: none;
-            -webkit-user-select: none;
-            touch-action: manipulation;
-            box-shadow: 0px 0px 0px 0px;
-            top: 5px;
-            left: 5px;
-  
+            padding: 0.5em;
+            border-bottom: 2px solid #ddd;
         }
         .pdf-viewer {
             width: 100%;
-            height: 1000px;
+            height: 80vh;
             border: none;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="header">AMU XI entrance question paper set-B</div>
+        <div class="header">AMU XI Entrance Question Paper Set-B</div>
         <embed src="alig XI ENTRANCE 2024 BY ASHHAR.pdf" type="application/pdf" class="pdf-viewer" />
     </div>
 </body>
