--- a/answers.html
+++ b/answers.html
@@ -97,7 +97,7 @@
     <h1 class="header101">Solution Library</h1>
     <div class="photo-library">
         <div class="photo-item">
-            <a href="/solutions.html/sol.html"><img src="/amu sol images/sol.png" alt="solution 1"></a>
+            <a href="/solutions.html/sol1.html"><img src="/amu sol images/sol1.png" alt="solution 1"></a>
             solution to question 1
         </div>
         <div class="photo-item">
@@ -108,7 +108,18 @@
             <a href="/solutions.html/sol3.html"><img src="/amu sol images/amu xi sol 3.png" alt="solution 3"></a>
             solution to question 3
         </div>
-       
+        <div class="photo-item">
+            <a href="/solutions.html/sol4.html"><img src="/amu sol images/sol4.jpg" alt="solution 4"></a>
+            solution to question 4
+        </div>
+        <div class="photo-item">
+            <a href="/solutions.html/sol5.html"><img src="/amu sol images/sol5.jpg" alt="solution 5"></a>
+            solution to question 5
+        </div>
+        <div class="photo-item">
+            <a href="/solutions.html/sol6.html"><img src="/amu sol images/sol6.jpg" alt="solution 6"></a>
+            solution to question 6
+        </div>
         <!-- Add more photo items as needed -->
     </div>
 </body>
