--- a/answers.html
+++ b/answers.html
@@ -120,6 +120,18 @@
             <a href="/solutions.html/sol6.html"><img src="/amu sol images/sol6.jpg" alt="solution 6"></a>
             solution to question 6
         </div>
+        <div class="photo-item">
+            <a href="/solutions.html/sol7.html"><img src="/amu sol images/sol7.jpg" alt="solution 7"></a>
+            solution to question 7
+        </div>
+        <div class="photo-item">
+            <a href="/solutions.html/sol8.html"><img src="/amu sol images/sol8.jpg" alt="solution 8"></a>
+            solution to question 8
+        </div>
+        <div class="photo-item">
+            <a href="/solutions.html/sol9.html"><img src="/amu sol images/sol9.jpg" alt="solution 9"></a>
+            solution to question 9
+        </div>
         <!-- Add more photo items as needed -->
     </div>
 </body>
