--- a/testing.html
+++ b/testing.html
@@ -1,32 +1,126 @@
-<!-- HTML !-->
-<button class="button-54" role="button">Button 54</button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Exam Marks Calculator by ashhar jamal</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+      padding: 0;
+    }
 
-/* CSS */
-.button-54 {
-  font-family: "Open Sans", sans-serif;
-  font-size: 16px;
-  letter-spacing: 2px;
-  text-decoration: none;
-  text-transform: uppercase;
-  color: #000;
-  cursor: pointer;
-  border: 3px solid;
-  padding: 0.25em 0.5em;
-  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
-  position: relative;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-}
+    .container {
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 5px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      width: 80%;
+      max-width: 600px;
+      margin-top: 20px;
+    }
 
-.button-54:active {
-  box-shadow: 0px 0px 0px 0px;
-  top: 5px;
-  left: 5px;
-}
+    h1 {
+      color: #333;
+      text-align: center;
+      margin-bottom: 10px;
+    }
 
-@media (min-width: 768px) {
-  .button-54 {
-    padding: 0.25em 0.75em;
-  }
-}
+    label {
+      display: block;
+      margin-bottom: 10px;
+    }
+
+    select {
+      width: 100%;
+      padding: 10px;
+      border: none;
+      border-radius: 5px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .button-54 {
+      font-family: "Open Sans", sans-serif;
+      font-size: 16px;
+      letter-spacing: 2px;
+      text-decoration: none;
+      text-transform: uppercase;
+      color: #000;
+      cursor: pointer;
+      border: 4px solid;
+      padding: 0.25em 0.5em;
+      box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+      position: relative;
+      user-select: none;
+      -webkit-user-select: none;
+      touch-action: manipulation;
+    }
+
+    .button-54:active {
+      box-shadow: 0px 0px 0px 0px;
+      top: 5px;
+      left: 5px;
+    }
+
+    .button-54:hover {
+      background: -webkit-linear-gradient(to right, #2575fc, #6a11cb);
+      background: linear-gradient(to right, #2575fc, #6a11cb);
+      transition: 0.3s;
+    }
+
+    button {
+      background-color: #4CAF50;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+
+    button:hover {
+      background-color: #45a049;
+    }
+
+    #result {
+      margin-top: 20px;
+      font-size: 1.2em;
+      color: #333;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="container1">
+      <h5></h5>
+      <a href="pdf.html" class="button-54">click here to View question paper</a>
+    </div>
+    <div class="container1">
+      <h5></h5>
+      <a href="answers.html" class="button-54">click here to View solutions</a>
+    </div>
+    <h1>Exam Marks Calculator by ashhar jamal</h1>
+    <p>Select the answer key set and enter your answers for each question below.</p>
+    <label for="answerKeySet">Select Answer Key Set:</label>
+    <select id="answerKeySet" onchange="loadQuestions()">
+      <option value="setA">Set A</option>
+      <option value="setB">Set B</option>
+    </select>
+    <div>
+      <p>Answered: <span id="answeredCount">0</span></p>
+      <p>Wrong: <span id="wrongCount">0</span></p>
+      <p>Unanswered: <span id="unansweredCount">0</span></p>
+    </div>
+    <div id="questions"></div>
+    <button onclick="calculateMarks()">Calculate Marks</button>
+    <p id="result"></p>
+  </div>
+  <script src="index.js"></script>
+</body>
+</html>
