--- a/answers.html
+++ b/answers.html
@@ -92,6 +92,8 @@
 <body>
     <h1>more solutions sooon
     </h1>
+    <p style="color: #6a11cb;">ill not be updating solutions from now on(send me your solutions solutions through watsapp or any otther mean)</p>
+   
     <br>
     <a href="/index.html" class="button-54">Return to Website</a>
     <h1 class="header101">Solution Library</h1>
